RainfallNative/src/graphics/Graphics.h

enum class VertexAttribute : int
{
	Position,  //!< a_position
	Normal,    //!< a_normal
	Tangent,   //!< a_tangent
	Bitangent, //!< a_bitangent
	Color0,    //!< a_color0
	Color1,    //!< a_color1
	Color2,    //!< a_color2
	Color3,    //!< a_color3
	Indices,   //!< a_indices
	Weight,    //!< a_weight
	TexCoord0, //!< a_texcoord0
	TexCoord1, //!< a_texcoord1
	TexCoord2, //!< a_texcoord2
	TexCoord3, //!< a_texcoord3
	TexCoord4, //!< a_texcoord4
	TexCoord5, //!< a_texcoord5
	TexCoord6, //!< a_texcoord6
	TexCoord7, //!< a_texcoord7

	Count
};
enum class VertexAttributeType : int
{
	Byte4,
	Half,
	Single,
	Vector2,
	Vector3,
	Vector4,

	Count
};
struct VertexElement
{
	VertexAttribute attribute;
	VertexAttributeType type;
	bool normalized;

	VertexElement(VertexAttribute attribute, VertexAttributeType type, bool normalized = false)
		: attribute(attribute), type(type), normalized(normalized)
	{
	}
};
enum BufferFlags : uint16_t
{
	None = 0x0000,
	ComputeRead = 0x0100,
	ComputeWrite = 0x0200,
	DrawIndirect = 0x0400,
	AllowResize = 0x0800,
	Index32 = 0x1000,
};
enum class BlendState
{
	Default,
	Alpha,
	Additive,
	Multiply,

	Count
};
enum class DepthTest
{
	None,
	Less,
	LEqual,
	Equal,
	GEqual,
	Greater,
	NotEqual,
	Never,
	Always,

	Count
};
enum class CullState
{
	None,
	ClockWise,
	CounterClockWise,

	Count
};
enum class PrimitiveType
{
	Triangle,
	TriangleStrip,
	Lines,
	LineStrip,
	Points,

	Count
};
typedef uint16_t VertexBuffer;
typedef uint16_t IndexBuffer;
typedef uint16_t DynamicIndexBuffer;
typedef uint16_t Texture;
RFAPI void* Graphics_AllocateNativeMemory(int size);
RFAPI void Graphics_FreeNativeMemory(void* ptr);
RFAPI const void* Graphics_AllocateVideoMemory(int size, const bgfx::Memory** outDataPtr);
RFAPI const bgfx::Memory* Graphics_CreateVideoMemoryRef(int size, const void* data, void(releaseCallback)(void* _ptr, void* _userData));
RFAPI VertexBuffer Graphics_CreateVertexBuffer(const bgfx::Memory* memory, const VertexElement* layoutElements, int layoutElementsCount, BufferFlags flags);
RFAPI void Graphics_DestroyVertexBuffer(VertexBuffer buffer);
RFAPI uint16_t Graphics_CreateDynamicVertexBuffer(const VertexElement* layoutElements, int layoutElementsCount, int vertexCount, uint16_t flags);
RFAPI void Graphics_DestroyDynamicVertexBuffer(uint16_t buffer);
RFAPI bool Graphics_CreateTransientVertexBuffer(const VertexElement* layoutElements, int layoutElementsCount, int vertexCount, bgfx::TransientVertexBuffer* buffer);
RFAPI IndexBuffer Graphics_CreateIndexBuffer(const bgfx::Memory* memory, uint16_t flags);
RFAPI void Graphics_DestroyIndexBuffer(IndexBuffer buffer);
RFAPI DynamicIndexBuffer Graphics_CreateDynamicIndexBuffer(int indexCount, uint16_t flags);
RFAPI void Graphics_DestroyDynamicIndexBuffer(DynamicIndexBuffer buffer);
RFAPI bool Graphics_CreateTransientIndexBuffer(int indexCount, bool index32, bgfx::TransientIndexBuffer* buffer);
RFAPI bool Graphics_CreateInstanceBuffer(int count, int stride, bgfx::InstanceDataBuffer* buffer);
RFAPI Texture Graphics_CreateTextureMutable(int width, int height, bgfx::TextureFormat::Enum format, uint64_t flags, bgfx::TextureInfo* info);
RFAPI Texture Graphics_CreateTextureMutableR(bgfx::BackbufferRatio::Enum ratio, bool hasMips, bgfx::TextureFormat::Enum format, uint64_t flags, bgfx::TextureInfo* info);
RFAPI void Graphics_SetTextureData(Texture texture, int x, int y, int width, int height, const bgfx::Memory* memory);
RFAPI Texture Graphics_CreateTextureImmutable(int width, int height, bgfx::TextureFormat::Enum format, uint64_t flags, const bgfx::Memory* memory, bgfx::TextureInfo* info);
RFAPI Texture Graphics_CreateTextureFromMemory(const bgfx::Memory* memory, uint64_t flags, bgfx::TextureInfo* info);
RFAPI Texture Graphics_CreateTexture3DImmutable(int width, int height, int depth, bgfx::TextureFormat::Enum format, uint64_t flags, const bgfx::Memory* memory, bgfx::TextureInfo* info);
RFAPI Texture Graphics_CreateTexture3DMutable(int width, int height, int depth, bool hasMips, bgfx::TextureFormat::Enum format, uint64_t flags, bgfx::TextureInfo* info);
RFAPI void Graphics_SetTexture3DData(Texture texture, int mip, int x, int y, int z, int width, int height, int depth, const bgfx::Memory* memory);
RFAPI Texture Graphics_CreateCubemap(int size, bgfx::TextureFormat::Enum format, bool mipmaps, uint64_t flags, bgfx::TextureInfo* info);
RFAPI void Graphics_DestroyTexture(Texture texture);